--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,12 @@
 
 /view/public/stylesheets/*.css
 /bower_components
+
+# Node build artifacts
+node_modules
+npm-debug.log
+
+# Local development
+*.env
+*.dev
+.DS_Store
