--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "Conv",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    //"dev": "nodemon index.js"
+    "start": "node index.js",
+    "build": "cd view/ && npm install && npm run build"
   },
+  "cacheDirectories": [
+    "node_modules",
+    "view/node_modules"
+  ],
   "keywords": [
     "converter"
   ],
@@ -39,7 +45,9 @@
     "nodemon": "^2.0.7"
   },
   "engines": {
-    "node": ">=10.0.0",
-    "npm": ">=6.0.0"
+   // "node": ">=10.0.0",
+   // "npm": ">=6.0.0"
+    "node": "14.17.0",
+    "npm": "6.14.13"
   }
 }
