--- a/view/package.json
+++ b/view/package.json
@@ -41,7 +41,8 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
+    ],
+    "proxy": "http://localhost:5000"
   },
   "devDependencies": {
     "express-session": "^1.17.2"
