--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-router-dom": "^5.2.0",
     "sequelize": "^6.6.2",
     "x-xss-protection": "^2.0.0",
-    "xss-clean": "^0.1.1"
+    "xss-clean": "^0.1.1",
+    "dotenv": "^8.6.0"
   },
   "devDependencies": {
     "bcrypt": "^5.0.1",
