--- a/package.json
+++ b/package.json
@@ -34,7 +34,12 @@
     "sequelize": "^6.6.2",
     "x-xss-protection": "^2.0.0",
     "xss-clean": "^0.1.1",
-    "dotenv": "^8.6.0"
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^8.6.0",
+    "helmet": "^4.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.7"
   },
   "devDependencies": {
     "bcrypt": "^5.0.1",
